[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "injekt-cli"
version = "0.1.0"
description = "A CLI tool for managing video media player configurations"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Injekt Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
test = [
    "hypothesis>=6.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
injekt = "injekt.cli.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["injekt*"]
